# RPG_Demo

./: .env.example  .env.llm.example  .gitignore  AGENTS.md  ARCHITECTURE.en.md  ARCHITECTURE.md  ARCHITECTURE.zh.md  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  LICENSE  Makefile  README.en.md  README.md  README.zh.md  alembic.ini  author_workflow_deep_cleanup_spec.md  dev.db  docker-compose.yml  frontend_agent_contract.md  progress.md  pyproject.toml  requirements.txt  responses_single_agent_migration_spec.md
.benchmarks/: light_ab_baseline.lock.json
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
app/: config.py  main.py
client/: .gitignore  README.md  pyproject.toml  rpg_cli.py
client/rpg_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
client/tests/: test_request_helpers.py  test_state_helpers.py
docs/: CASE_STUDY.md  CURRENT_SYSTEM_MAP.md  GOOD_FIRST_ISSUES.en.md  GOOD_FIRST_ISSUES.md  GOOD_FIRST_ISSUES.zh.md  INDEX.md  PROJECT_PAUSE_2026-05-09.md  PROJECT_PAUSE_2026-05-09.zh.md  api.md  architecture-llm-boundary-zh.md  architecture.md  architecture_story_runtime.md  author-mode-zh.md  author_play_stability_suite.md  code-structure.md  db_migration_runbook.md  deployment_probes.md  frontend_handoff.md  index.html  oncall_sop.md  playable_validation_contract.md  playtest_report.md  prompt_authoring_structure.md  runtime_status.md  story-authoring-spec.md  story-pack-spec.md  story_architecture_v3.md  verification.md
eval_data/: author_play_stability_suite_v1.json
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend2/: index.html  package-lock.json  package.json  vite.config.ts
project/: xcode_json_methodology.md
remotion-demo/: package-lock.json  package.json
rpg_backend/: __init__.py  config.py  main.py  quotas.py  responses_transport.py  sqlite_utils.py
scripts/: __init__.py  benchmark_input_sets.json  benchmark_release.py  benchmark_toxiproxy.py  call_llm_worker.py  capture_demo_screenshots.py  check_repo_contract.sh  dev.sh  dev_stack.sh  emit_runtime_alerts.py  eval_prompt_baseline.py  eval_prompt_quality.py  evaluate_generator.py  evaluate_llm_gate.py  export_openapi.py  (+6 more)
(+741 files in other folders)
