[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-stories"
version = "0.1.0"
description = "An LLM-driven 12-turn interactive drama engine. 3 selectable player roles, 9 narrative mechanisms, 15 shareable endings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tiny Stories contributors" }]
keywords = [
  "llm",
  "interactive-fiction",
  "narrative-game",
  "prompt-engineering",
  "openai-compatible",
  "fastapi",
  "react",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Role-Playing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "openai>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://lishehao.github.io/RPG_Demo/"
Repository = "https://github.com/lishehao/RPG_Demo"
Issues = "https://github.com/lishehao/RPG_Demo/issues"
Architecture = "https://github.com/lishehao/RPG_Demo/blob/main/ARCHITECTURE.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
  "playwright>=1.54.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rpg_backend*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
