[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-client"
version = "0.1.0"
description = "Minimal CLI client for RPG Demo backend"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
pretty = ["rich>=13.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
rpg = "rpg_cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
